--- a/index.html
+++ b/index.html
@@ -1297,7 +1297,7 @@
             <div class="contact-info">
               <p class="contact-title">Phone</p>
 
-              <a href="tel" class="contact-link">+91 7288808549</a>
+              <a href="tel" class="contact-link">+91 7288XXXXXX</a>
             </div>
 
           </li>
