--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       </div>
 
-      <div class="sidebar-info_more">
+<!--       <div class="sidebar-info_more">
 
         <div class="separator"></div>
 
@@ -121,7 +121,7 @@
 
           </li>
 
-        </ul>
+        </ul> -->
 
         <!-- <div class="separator"></div>
 
