--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
         - #CONTACT
       -->
 
-     <article class="contact" data-page="contact">
+   <article class="contact" data-page="contact">
 
   <header>
     <h2 class="h2 article-title">Contact</h2>
@@ -1292,7 +1292,7 @@
         </div>
         <div class="contact-info">
           <p class="contact-title">Phone</p>
-          <a href="tel:+917288XXXXXX" class="contact-link">+91 7288XXXXXX</a>
+          <a href="tel:+917288123456" class="contact-link">+91 7288 123456</a>
         </div>
       </li>
 
@@ -1318,7 +1318,21 @@
 
     </ul>
 
-  </div> <!-- ✅ fixed closing tag -->
+    <div class="separator"></div>
+    <ul class="social-list">
+      <li class="social-item">
+        <a href="https://github.com/YourUsername" class="social-link" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
+      </li>
+      <li class="social-item">
+        <a href="https://linkedin.com/in/YourProfile" class="social-link" target="_blank">
+          <ion-icon name="logo-linkedin"></ion-icon>
+        </a>
+      </li>
+    </ul>
+
+  </div>
 
 </article>
 
