--- a/index.html
+++ b/index.html
@@ -1320,13 +1320,9 @@
 
     <div class="separator"></div>
     <ul class="social-list">
-      <li class="social-item">
-        <a href="https://github.com/YourUsername" class="social-link" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
-        </a>
       </li>
       <li class="social-item">
-        <a href="https://linkedin.com/in/YourProfile" class="social-link" target="_blank">
+        <a href="https://www.linkedin.com/in/manikantakarri369/" class="social-link" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </li>
