--- a/index.html
+++ b/index.html
@@ -1261,8 +1261,7 @@
 <!--
         - #CONTACT
       -->
-
-   <article class="contact" data-page="contact">
+<article class="contact" data-page="contact">
 
   <header>
     <h2 class="h2 article-title">Contact</h2>
@@ -1319,10 +1318,15 @@
     </ul>
 
     <div class="separator"></div>
+
     <ul class="social-list">
+      <li class="social-item">
+        <a href="https://github.com/YourUsername" class="social-link" target="_blank">
+          <ion-icon name="logo-github"></ion-icon>
+        </a>
       </li>
       <li class="social-item">
-        <a href="https://www.linkedin.com/in/manikantakarri369/" class="social-link" target="_blank">
+        <a href="https://linkedin.com/in/YourProfile" class="social-link" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </li>
@@ -1331,8 +1335,6 @@
   </div>
 
 </article>
-
-
 
 
 
