--- a/index.html
+++ b/index.html
@@ -23,6 +23,46 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <style>
+  /* Contact section styles */
+  .contacts-list,
+  .social-list {
+    list-style: none;
+    padding: 0;
+    margin: 20px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .contact-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .icon-box {
+    font-size: 20px;
+    color: #0077b5;
+  }
+
+  .contact-link {
+    color: #333;
+    text-decoration: none;
+  }
+
+  .contact-link:hover {
+    text-decoration: underline;
+  }
+
+  /* Responsive navbar */
+  @media (max-width: 600px) {
+    nav {
+      flex-direction: column;
+    }
+  }
+</style>
+
 </head>
 
 <body>
