--- a/index.html
+++ b/index.html
@@ -230,8 +230,9 @@
           </li> -->
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Contact</button>
-          </li>
+  <button class="navbar-link" data-nav-link="contact">Contact</button>
+</li>
+
 
         </ul>
 
