--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@
 </article>
 
 
-        <section class="contact-form">
+<!--         <section class="contact-form">
 
           <h3 class="h3 form-title">Contact Form</h3>
 
@@ -1359,7 +1359,7 @@
           </form>
 
         </section>
-
+ -->
       </article>
 
     </div>
