--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       </div>
 
-      <div class="sidebar-info_more">
+<!--       <div class="sidebar-info_more">
 
         <div class="separator"></div>
 
@@ -122,7 +122,7 @@
           </li>
 
         </ul>
-
+ -->
         <!-- <div class="separator"></div>
 
         <ul class="social-list">
