--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Andhra University, Visakhapatnam</h4>
+              <h4 class="h4 timeline-item-title">ANDHRA University, Visakhapatnam</h4>
               <h3 class="h4 timeline-item-title">Bachelor of Science (B.Sc.) in Computer Science | CGPA: 7.64</h3>
 
               <span>2019 — 2022</span>
@@ -587,7 +587,7 @@
               <h3 class="h4 timeline-item-title">Board of Secondary Education (SSC) | CGPA: 9.2</h3>
 
 
-              <span>2017 — 2019</span>
+              <span>2016 — 2017</span>
 
               <p class="timeline-text">
                Completed SSC with good academic performance, forming the foundation of my educational journey.
@@ -793,28 +793,44 @@
     <h2 class="h2 article-title">Projects</h2>
   </header>
 
-  <section class="projects-list">
-    <ul>
-      <li>
-        <h5 class="h3">Project 1: Secure Organ Donation Using Blockchain Technology</h5>
-        <p>This project aims to make organ donation more secure, transparent, and fast by using blockchain technology to safely store donor and recipient data without tampering. Through smart contracts, the system automatically matches and allocates organs based on urgency, blood type, and location, reducing human errors, preventing fraud, and ensuring fairness in the process. The ultimate goal is to save more lives by making organ donation trustworthy and efficient.</p>
+  <section class="timeline">
+    <div class="title-wrapper">
+      <div class="icon-box">
+        <ion-icon name="code-slash-outline"></ion-icon>
+      </div>
+      <h4 class="h3">My Projects</h4>
+    </div>
+
+    <ol class="timeline-list">
+
+      <li class="timeline-item">
+        <h3 class="h4 timeline-item-title">Secure Organ Donation Using Blockchain Technology</h3>
+        <span>2024</span>
+        <p class="timeline-text">
+          Developed a secure and transparent system for organ donation using blockchain.  
+          Implemented smart contracts to match donors & recipients based on urgency, blood type, and location, ensuring fairness and preventing fraud.
+        </p>
       </li>
 
-      <br>
-
-      <li>
-        <h5 class="h3">Project 2: Airline Reservation Management System</h5>
-        <p>Developed a system to search, book, and cancel flight tickets with automated passenger and flight record handling. Built using Visual Basic (front-end) and Oracle (back-end) to ensure fast, accurate, and user-friendly booking.</p>
+      <li class="timeline-item">
+        <h3 class="h4 timeline-item-title">Airline Reservation Management System</h3>
+        <span>2022</span>
+        <p class="timeline-text">
+          Built a system for searching, booking, and canceling flight tickets.  
+          Technologies: Visual Basic (front-end) and Oracle (back-end).  
+          Improved efficiency with automated passenger & flight record handling.
+        </p>
       </li>
 
-      <br>
-
-      <li>
-        <h5 class="h3">Project 3: Personal Portfolio Website</h5>
-        <p>Created a responsive personal portfolio website using HTML, CSS, and JavaScript to showcase my skills, projects, and achievements.</p>
+      <li class="timeline-item">
+        <h3 class="h4 timeline-item-title">Personal Portfolio Website</h3>
+        <span>2025</span>
+        <p class="timeline-text">
+          Designed and developed a responsive personal portfolio using HTML, CSS, and JavaScript to showcase my skills, achievements, and projects.
+        </p>
       </li>
-    </ul>
 
+    </ol>
   </section>
 </article>
 
